--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1100,8 +1100,9 @@
 
 		a img {
 			border: 0;
-			width: 100%;
-			height: 250px;
+	    width: 20em;
+	    height: 21em;
+	}
 }
 		}
 
@@ -1750,6 +1751,10 @@
 				margin: 0 0 0.75em 0;
 			}
 
+			h3 {
+				margin: 1em 0 0.75em 0;
+			}
+
 			header {
 				margin: 0 0 3em 0;
 			}
@@ -1804,7 +1809,7 @@
 			}
 
 				.box.style1 {
-					padding: 3em 2em 3.5em 2em;
+					padding: 3em 2em 2em 2em;;
 				}
 
 					.box.style1 h3 {
@@ -1873,7 +1878,7 @@
 				}
 
 				#top p {
-					font-size: 1.5em;
+					font-size: 1.2em;
 					line-height: 1.75em;
 				}
 
@@ -2110,4 +2115,25 @@
 #about-apps {
 	margin-left: 50px;
 	margin-right: 50px
+}
+
+#about-apps > p {
+	font-size: 1.2em;
+}
+
+section {
+	width: 27em;
+	height: 34em;
+}
+
+.my_row {
+	display: flex;
+	justify-content: space-around;
+}
+
+#projects {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 77em;
 }
