--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1300,6 +1300,7 @@
 		.image img {
 			display: block;
 			width: 100%;
+			height: 27em;
 		}
 
 		.image.fit {
@@ -1695,10 +1696,6 @@
 	#top .image {
 		border-radius: 50%;
 	}
-
-		#top .image img {
-			border-radius: 50%;
-		}
 
 	#top p a {
 		color: inherit;
@@ -2165,4 +2162,13 @@ section {
 
 .nlp-projects {
 	color: #888;
+}
+
+* > a {
+	text-decoration: none;
+}
+
+
+.source-code > a:hover {
+	font-weight: bold;
 }
